# Gamepad_Capture_Desktop_App

./: CMakeLists.txt  flake.nix  lsan.supp
src/: main.cpp
src/ui/: main_container.cpp  main_container.h  main_window.cpp  main_window.h
src/video/: video_decoder.cpp  video_decoder.h  video_window.cpp  video_window.h  video_worker.cpp  video_worker.h
